--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TwinStickCPP/Maps/TwinStickExampleMap
+EditorStartupMap=/Game/TwinStickCPP/Maps/Mapx01Backup.Mapx01Backup
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/TwinStickCPP/Maps/TwinStickExampleMap
+GameDefaultMap=/Game/TwinStickCPP/Maps/Mapx01Backup.Mapx01Backup
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/ZombieFingers.ZombieFingersGameMode
 GlobalDefaultServerGameMode=None
@@ -71,5 +71,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
